curso1/modulo4/ejemplos/service-np.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-web-np
  labels:
    app: test-web
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: test-web
