curso1/modulo4/ejemplos/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-web
  namespace: josedom24-dev
  labels:
    app: test-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: test-web
